--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@sveltejs/adapter-netlify": "^4.4.0",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@vitejs/plugin-basic-ssl": "^2.0.0",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
@@ -36,7 +37,9 @@
 		"vite-favicon-manifest": "^1.0.0"
 	},
 	"dependencies": {
+		"@supabase/supabase-js": "^2.49.8",
 		"@sveltejs/enhanced-img": "^0.4.4",
+		"barcode-detector": "^3.0.4",
 		"jthawme-utils": "^1.0.0",
 		"normalize.css": "^8.0.1",
 		"svelte-markdown": "^0.4.1"
